--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>🌿Healthy way</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KMFBEFKDMW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KMFBEFKDMW');
+</script>
 
 </head>
 <body>
@@ -139,3 +147,4 @@ You:
 
 </body>
 </html>
+
