--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   gtag('config', 'G-KMFBEFKDMW');
 </script>
+
+
+  <meta name="p:domain_verify" content="ee6a8682b8f058c088ac32941254c2b8"/>
 </head>
 <body>
 
@@ -148,5 +151,6 @@ You:
 
 </body>
 </html>
+
 
 
